# Simple-Spark

./: .gitignore  README.md  build_binary.sh  pyproject.toml
.github/workflows/: python-publish.yml
simplespark/: config.py  environment.py  main.py  main_binary.py  run.py  templates.py
simplespark/cluster/: build.py  tasks.py
simplespark/environment/: build.py  config.py  env.py  tasks.py  templates.py
simplespark/setup/: build.py  tasks.py
simplespark/utils/: maven.py  network.py  shell.py  ssh.py
simspark/: build.py  config.py  run.py  setup.py
simspark/setup/: tasks.py
simspark/utils/: network.py  shell.py
src/simplespark/: environment.py  main.py  templates.py
src/simplespark/utils/: maven.py
