[project]
name = "simplespark"
version = "0.1.1"
authors = [
  {name="Ross Palmer", email="rossbpalmer@gmail.com"}
]
description = "Spark environment manager and job orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "wget",
  "typer"
]

[project.urls]
Homepage="https://github.com/rosspalmer/Simple-Spark"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
